Added an option to allow the specification of a comma separated list of characters to use as string enclosures (default is a single ").
git-svn-id: https://svn.cms.waikato.ac.nz/svn/weka/branches/stable-3-6@9036 e0a1b77d-ad91-4216-81b1-defd5f83fa92