@@ -22,16 +22,6 @@
 
 package weka.core.converters;
 
-import weka.core.Attribute;
-import weka.core.FastVector;
-import weka.core.Instance;
-import weka.core.Instances;
-import weka.core.Option;
-import weka.core.OptionHandler;
-import weka.core.Range;
-import weka.core.RevisionUtils;
-import weka.core.Utils;
-
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileNotFoundException;
@@ -45,54 +35,91 @@ import java.util.Enumeration;
 import java.util.Hashtable;
 import java.util.Vector;
 
+import weka.core.Attribute;
+import weka.core.FastVector;
+import weka.core.Instance;
+import weka.core.Instances;
+import weka.core.Option;
+import weka.core.OptionHandler;
+import weka.core.Range;
+import weka.core.RevisionUtils;
+import weka.core.Utils;
+
 /**
- <!-- globalinfo-start -->
- * Reads a source that is in comma separated or tab separated format. Assumes that the first row in the file determines the number of and names of the attributes.
+ * <!-- globalinfo-start --> * Reads a source that is in comma separated or tab
+ * separated format. Assumes that the first row in the file determines the
+ * number of and names of the attributes. *
  * <p/>
- <!-- globalinfo-end -->
- *
- <!-- options-start -->
- * Valid options are: <p/>
+ * <!-- globalinfo-end -->
  * 
- * <pre> -N &lt;range&gt;
- *  The range of attributes to force type to be NOMINAL.
- *  'first' and 'last' are accepted as well.
- *  Examples: "first-last", "1,4,5-27,50-last"
- *  (default: -none-)</pre>
+ * <!-- options-start --> * Valid options are:
+ * <p/>
+ * * *
  * 
- * <pre> -S &lt;range&gt;
- *  The range of attribute to force type to be STRING.
- *  'first' and 'last' are accepted as well.
- *  Examples: "first-last", "1,4,5-27,50-last"
- *  (default: -none-)</pre>
+ * <pre>
+ * -N &lt;range&gt;
+ * *  The range of attributes to force type to be NOMINAL.
+ * *  'first' and 'last' are accepted as well.
+ * *  Examples: "first-last", "1,4,5-27,50-last"
+ * *  (default: -none-)
+ * </pre>
  * 
- * <pre> -D &lt;range&gt;
- *  The range of attribute to force type to be DATE.
- *  'first' and 'last' are accepted as well.
- *  Examples: "first-last", "1,4,5-27,50-last"
- *  (default: -none-)</pre>
+ * * *
  * 
- * <pre> -format &lt;date format&gt;
- *  The date formatting string to use to parse date values.
- *  (default: "yyyy-MM-dd'T'HH:mm:ss")</pre>
+ * <pre>
+ * -S &lt;range&gt;
+ * *  The range of attribute to force type to be STRING.
+ * *  'first' and 'last' are accepted as well.
+ * *  Examples: "first-last", "1,4,5-27,50-last"
+ * *  (default: -none-)
+ * </pre>
  * 
- * <pre> -M &lt;str&gt;
- *  The string representing a missing value.
- *  (default: ?)</pre>
+ * * *
  * 
- <!-- options-end -->
- *
+ * <pre>
+ * -D &lt;range&gt;
+ * *  The range of attribute to force type to be DATE.
+ * *  'first' and 'last' are accepted as well.
+ * *  Examples: "first-last", "1,4,5-27,50-last"
+ * *  (default: -none-)
+ * </pre>
+ * 
+ * * *
+ * 
+ * <pre>
+ * -format &lt;date format&gt;
+ * *  The date formatting string to use to parse date values.
+ * *  (default: "yyyy-MM-dd'T'HH:mm:ss")
+ * </pre>
+ * 
+ * * *
+ * 
+ * <pre>
+ * -M &lt;str&gt;
+ * *  The string representing a missing value.
+ * *  (default: ?)
+ * </pre>
+ * 
+ * * *
+ * 
+ * <pre>
+ * -E &lt;enclosures&gt;
+ * *  The enclosure character(s) to use for strings.
+ * *  Specify as a comma separated list (e.g. ",' (default: '"')
+ * </pre>
+ * 
+ * * <!-- options-end -->
+ * 
  * @author Mark Hall (mhall@cs.waikato.ac.nz)
  * @version $Revision$
  * @see Loader
  */
-public class CSVLoader 
-  extends AbstractFileLoader 
-  implements BatchConverter, OptionHandler {
+public class CSVLoader extends AbstractFileLoader implements BatchConverter,
+    OptionHandler {
 
   /** for serialization. */
   static final long serialVersionUID = 5607529739745491340L;
-  
+
   /** the file extension. */
   public static String FILE_EXTENSION = ".csv";
 
@@ -105,34 +132,37 @@ public class CSVLoader
    * Holds instances accumulated so far.
    */
   protected FastVector m_cumulativeInstances;
-  
-  /** The reader for the data. */         
+
+  /** The reader for the data. */
   protected transient BufferedReader m_sourceReader;
-  
+
   /** Tokenizer for the data. */
   protected transient StreamTokenizer m_st;
-  
+
   /** The range of attributes to force to type nominal. */
   protected Range m_NominalAttributes = new Range();
-  
+
   /** The range of attributes to force to type string. */
   protected Range m_StringAttributes = new Range();
-  
+
   /** The range of attributes to force to type date */
   protected Range m_dateAttributes = new Range();
-  
+
   /** The formatting string to use to parse dates */
   protected String m_dateFormat = "";
-  
+
   /** The formatter to use on dates */
   protected SimpleDateFormat m_formatter;
-  
+
   /** The placeholder for missing values. */
   protected String m_MissingValue = "?";
-  
+
   /** whether the first row has been read. */
   protected boolean m_FirstCheck;
-  
+
+  /** enclosure character(s) to use for strings */
+  protected String m_Enclosures = "\"";
+
   /**
    * default constructor.
    */
@@ -143,7 +173,7 @@ public class CSVLoader
 
   /**
    * Get the file extension used for arff files.
-   *
+   * 
    * @return the file extension
    */
   public String getFileExtension() {
@@ -152,7 +182,7 @@ public class CSVLoader
 
   /**
    * Returns a description of the file type.
-   *
+   * 
    * @return a short file description
    */
   public String getFileDescription() {
@@ -161,106 +191,134 @@ public class CSVLoader
 
   /**
    * Gets all the file extensions used for this type of file.
-   *
+   * 
    * @return the file extensions
    */
   public String[] getFileExtensions() {
-    return new String[]{getFileExtension()};
+    return new String[] { getFileExtension() };
   }
 
   /**
    * Returns a string describing this attribute evaluator.
    * 
-   * @return a description of the evaluator suitable for
-   * displaying in the explorer/experimenter gui
+   * @return a description of the evaluator suitable for displaying in the
+   *         explorer/experimenter gui
    */
   public String globalInfo() {
     return "Reads a source that is in comma separated or tab separated format. "
-      +"Assumes that the first row in the file determines the number of "
-      +"and names of the attributes.";
+        + "Assumes that the first row in the file determines the number of "
+        + "and names of the attributes.";
   }
 
   /**
    * Returns an enumeration describing the available options.
-   *
+   * 
    * @return an enumeration of all the available options.
    */
   public Enumeration listOptions() {
     Vector result = new Vector();
-    
+
     result.addElement(new Option(
         "\tThe range of attributes to force type to be NOMINAL.\n"
-        + "\t'first' and 'last' are accepted as well.\n"
-        + "\tExamples: \"first-last\", \"1,4,5-27,50-last\"\n"
-        + "\t(default: -none-)",
-        "N", 1, "-N <range>"));
-    
+            + "\t'first' and 'last' are accepted as well.\n"
+            + "\tExamples: \"first-last\", \"1,4,5-27,50-last\"\n"
+            + "\t(default: -none-)", "N", 1, "-N <range>"));
+
     result.addElement(new Option(
         "\tThe range of attribute to force type to be STRING.\n"
-        + "\t'first' and 'last' are accepted as well.\n"
-        + "\tExamples: \"first-last\", \"1,4,5-27,50-last\"\n"
-        + "\t(default: -none-)",
-        "S", 1, "-S <range>"));
-    
+            + "\t'first' and 'last' are accepted as well.\n"
+            + "\tExamples: \"first-last\", \"1,4,5-27,50-last\"\n"
+            + "\t(default: -none-)", "S", 1, "-S <range>"));
+
     result.add(new Option(
         "\tThe range of attribute to force type to be DATE.\n"
-        + "\t'first' and 'last' are accepted as well.\n"
-        + "\tExamples: \"first-last\", \"1,4,5-27,50-last\"\n"
-        + "\t(default: -none-)",
-        "D", 1, "-D <range>"));
-    
+            + "\t'first' and 'last' are accepted as well.\n"
+            + "\tExamples: \"first-last\", \"1,4,5-27,50-last\"\n"
+            + "\t(default: -none-)", "D", 1, "-D <range>"));
+
     result.add(new Option(
-        "\tThe date formatting string to use to parse date values.\n"        
-        + "\t(default: \"yyyy-MM-dd'T'HH:mm:ss\")",
-        "format", 1, "-format <date format>"));
-    
+        "\tThe date formatting string to use to parse date values.\n"
+            + "\t(default: \"yyyy-MM-dd'T'HH:mm:ss\")", "format", 1,
+        "-format <date format>"));
+
+    result.addElement(new Option("\tThe string representing a missing value.\n"
+        + "\t(default: ?)", "M", 1, "-M <str>"));
+
     result.addElement(new Option(
-        "\tThe string representing a missing value.\n"
-        + "\t(default: ?)",
-        "M", 1, "-M <str>"));
-      
+        "\tThe enclosure character(s) to use for strings.\n"
+            + "\tSpecify as a comma separated list (e.g. \",'"
+            + "\t(default: '\"')", "E", 1, "-E <enclosures>"));
+
     return result.elements();
   }
 
   /**
-   * Parses a given list of options. <p/>
-   *
-   <!-- options-start -->
-   * Valid options are: <p/>
+   * Parses a given list of options.
+   * <p/>
    * 
-   * <pre> -N &lt;range&gt;
-   *  The range of attributes to force type to be NOMINAL.
-   *  'first' and 'last' are accepted as well.
-   *  Examples: "first-last", "1,4,5-27,50-last"
-   *  (default: -none-)</pre>
+   * <!-- options-start --> * Valid options are:
+   * <p/>
+   * * *
    * 
-   * <pre> -S &lt;range&gt;
-   *  The range of attribute to force type to be STRING.
-   *  'first' and 'last' are accepted as well.
-   *  Examples: "first-last", "1,4,5-27,50-last"
-   *  (default: -none-)</pre>
+   * <pre>
+   * -N &lt;range&gt;
+   * *  The range of attributes to force type to be NOMINAL.
+   * *  'first' and 'last' are accepted as well.
+   * *  Examples: "first-last", "1,4,5-27,50-last"
+   * *  (default: -none-)
+   * </pre>
    * 
-   * <pre> -D &lt;range&gt;
-   *  The range of attribute to force type to be DATE.
-   *  'first' and 'last' are accepted as well.
-   *  Examples: "first-last", "1,4,5-27,50-last"
-   *  (default: -none-)</pre>
+   * * *
    * 
-   * <pre> -format &lt;date format&gt;
-   *  The date formatting string to use to parse date values.
-   *  (default: "yyyy-MM-dd'T'HH:mm:ss")</pre>
+   * <pre>
+   * -S &lt;range&gt;
+   * *  The range of attribute to force type to be STRING.
+   * *  'first' and 'last' are accepted as well.
+   * *  Examples: "first-last", "1,4,5-27,50-last"
+   * *  (default: -none-)
+   * </pre>
    * 
-   * <pre> -M &lt;str&gt;
-   *  The string representing a missing value.
-   *  (default: ?)</pre>
+   * * *
    * 
-   <!-- options-end -->
-   *
+   * <pre>
+   * -D &lt;range&gt;
+   * *  The range of attribute to force type to be DATE.
+   * *  'first' and 'last' are accepted as well.
+   * *  Examples: "first-last", "1,4,5-27,50-last"
+   * *  (default: -none-)
+   * </pre>
+   * 
+   * * *
+   * 
+   * <pre>
+   * -format &lt;date format&gt;
+   * *  The date formatting string to use to parse date values.
+   * *  (default: "yyyy-MM-dd'T'HH:mm:ss")
+   * </pre>
+   * 
+   * * *
+   * 
+   * <pre>
+   * -M &lt;str&gt;
+   * *  The string representing a missing value.
+   * *  (default: ?)
+   * </pre>
+   * 
+   * * *
+   * 
+   * <pre>
+   * -E &lt;enclosures&gt;
+   * *  The enclosure character(s) to use for strings.
+   * *  Specify as a comma separated list (e.g. ",' (default: '"')
+   * </pre>
+   * 
+   * * <!-- options-end -->
+   * 
    * @param options the list of options as an array of strings
    * @throws Exception if an option is not supported
    */
   public void setOptions(String[] options) throws Exception {
-    String	tmpStr;
+    String tmpStr;
 
     tmpStr = Utils.getOption('N', options);
     if (tmpStr.length() != 0)
@@ -279,7 +337,7 @@ public class CSVLoader
       setMissingValue(tmpStr);
     else
       setMissingValue("?");
-    
+
     tmpStr = Utils.getOption('D', options);
     if (tmpStr.length() > 0) {
       setDateAttributes(tmpStr);
@@ -288,28 +346,32 @@ public class CSVLoader
     if (tmpStr.length() > 0) {
       setDateFormat(tmpStr);
     }
+    tmpStr = Utils.getOption("E", options);
+    if (tmpStr.length() > 0) {
+      setEnclosureCharacters(tmpStr);
+    }
   }
 
   /**
    * Gets the current settings of the Classifier.
-   *
+   * 
    * @return an array of strings suitable for passing to setOptions
    */
   public String[] getOptions() {
-    Vector<String>	result;
-    
-    result  = new Vector<String>();
+    Vector<String> result;
+
+    result = new Vector<String>();
 
     if (getNominalAttributes().length() > 0) {
       result.add("-N");
       result.add(getNominalAttributes());
     }
-    
+
     if (getStringAttributes().length() > 0) {
       result.add("-S");
       result.add(getStringAttributes());
     }
-    
+
     if (getDateAttributes().length() > 0) {
       result.add("-D");
       result.add(getDateAttributes());
@@ -319,23 +381,26 @@ public class CSVLoader
 
     result.add("-M");
     result.add(getMissingValue());
-    
+
+    result.add("-E");
+    result.add(getEnclosureCharacters());
+
     return result.toArray(new String[result.size()]);
   }
-  
+
   /**
    * Sets the attribute range to be forced to type nominal.
    * 
-   * @param value	the range
+   * @param value the range
    */
   public void setNominalAttributes(String value) {
     m_NominalAttributes.setRanges(value);
   }
-  
+
   /**
    * Returns the current attribute range to be forced to type nominal.
    * 
-   * @return		the range
+   * @return the range
    */
   public String getNominalAttributes() {
     return m_NominalAttributes.getRanges();
@@ -343,29 +408,28 @@ public class CSVLoader
 
   /**
    * Returns the tip text for this property.
-   *
-   * @return 		tip text for this property suitable for
-   *         		displaying in the explorer/experimenter gui
+   * 
+   * @return tip text for this property suitable for displaying in the
+   *         explorer/experimenter gui
    */
   public String nominalAttributesTipText() {
-    return 
-        "The range of attributes to force to be of type NOMINAL, example "
-      + "ranges: 'first-last', '1,4,7-14,50-last'.";
+    return "The range of attributes to force to be of type NOMINAL, example "
+        + "ranges: 'first-last', '1,4,7-14,50-last'.";
   }
-  
+
   /**
    * Sets the attribute range to be forced to type string.
    * 
-   * @param value	the range
+   * @param value the range
    */
   public void setStringAttributes(String value) {
     m_StringAttributes.setRanges(value);
   }
-  
+
   /**
    * Returns the current attribute range to be forced to type string.
    * 
-   * @return		the range
+   * @return the range
    */
   public String getStringAttributes() {
     return m_StringAttributes.getRanges();
@@ -373,16 +437,15 @@ public class CSVLoader
 
   /**
    * Returns the tip text for this property.
-   *
-   * @return 		tip text for this property suitable for
-   *         		displaying in the explorer/experimenter gui
+   * 
+   * @return tip text for this property suitable for displaying in the
+   *         explorer/experimenter gui
    */
   public String stringAttributesTipText() {
-    return 
-        "The range of attributes to force to be of type STRING, example "
-      + "ranges: 'first-last', '1,4,7-14,50-last'.";
+    return "The range of attributes to force to be of type STRING, example "
+        + "ranges: 'first-last', '1,4,7-14,50-last'.";
   }
-  
+
   /**
    * Set the attribute range to be forced to type date.
    * 
@@ -391,7 +454,7 @@ public class CSVLoader
   public void setDateAttributes(String value) {
     m_dateAttributes.setRanges(value);
   }
-  
+
   /**
    * Returns the current attribute range to be forced to type date.
    * 
@@ -400,18 +463,18 @@ public class CSVLoader
   public String getDateAttributes() {
     return m_dateAttributes.getRanges();
   }
-  
+
   /**
    * Returns the tip text for this property.
-   *
-   * @return            tip text for this property suitable for
-   *                    displaying in the explorer/experimenter gui
+   * 
+   * @return tip text for this property suitable for displaying in the
+   *         explorer/experimenter gui
    */
   public String dateAttributesTipText() {
     return "The range of attributes to force to type STRING, example "
-    + "ranges: 'first-last', '1,4,7-14, 50-last'.";
+        + "ranges: 'first-last', '1,4,7-14, 50-last'.";
   }
-  
+
   /**
    * Set the format to use for parsing date values.
    * 
@@ -421,7 +484,7 @@ public class CSVLoader
     m_dateFormat = value;
     m_formatter = null;
   }
-  
+
   /**
    * Get the format to use for parsing date values.
    * 
@@ -431,30 +494,58 @@ public class CSVLoader
   public String getDateFormat() {
     return m_dateFormat;
   }
-  
+
   /**
    * Returns the tip text for this property.
-   *
-   * @return            tip text for this property suitable for
-   *                    displaying in the explorer/experimenter gui
+   * 
+   * @return tip text for this property suitable for displaying in the
+   *         explorer/experimenter gui
    */
   public String dateFormatTipText() {
     return "The format to use for parsing date values.";
   }
-  
+
+  /**
+   * Returns the tip text for this property.
+   * 
+   * @return tip text for this property suitable for displaying in the
+   *         explorer/experimenter gui
+   */
+  public String enclosureCharactersTipText() {
+    return "The characters to use as enclosures for strings. E.g. \",'";
+  }
+
+  /**
+   * Set the character(s) to use/recognize as string enclosures
+   * 
+   * @param enclosure the characters to use as string enclosures
+   */
+  public void setEnclosureCharacters(String enclosure) {
+    m_Enclosures = enclosure;
+  }
+
+  /**
+   * Get the character(s) to use/recognize as string enclosures
+   * 
+   * @return the characters to use as string enclosures
+   */
+  public String getEnclosureCharacters() {
+    return m_Enclosures;
+  }
+
   /**
    * Sets the placeholder for missing values.
    * 
-   * @param value	the placeholder
+   * @param value the placeholder
    */
   public void setMissingValue(String value) {
     m_MissingValue = value;
   }
-  
+
   /**
    * Returns the current placeholder for missing values.
    * 
-   * @return		the placeholder
+   * @return the placeholder
    */
   public String getMissingValue() {
     return m_MissingValue;
@@ -462,35 +553,35 @@ public class CSVLoader
 
   /**
    * Returns the tip text for this property.
-   *
-   * @return 		tip text for this property suitable for
-   *         		displaying in the explorer/experimenter gui
+   * 
+   * @return tip text for this property suitable for displaying in the
+   *         explorer/experimenter gui
    */
   public String missingValueTipText() {
     return "The placeholder for missing values, default is '?'.";
   }
-  
+
   /**
-   * Resets the Loader object and sets the source of the data set to be 
-   * the supplied Stream object.
-   *
+   * Resets the Loader object and sets the source of the data set to be the
+   * supplied Stream object.
+   * 
    * @param input the input stream
    * @exception IOException if an error occurs
    */
   @Override
-  public void setSource(InputStream input) throws IOException {    
-    m_structure    = null;
-    m_sourceFile   = null;
-    m_File         = null;
-    m_FirstCheck     = true;
+  public void setSource(InputStream input) throws IOException {
+    m_structure = null;
+    m_sourceFile = null;
+    m_File = null;
+    m_FirstCheck = true;
 
     m_sourceReader = new BufferedReader(new InputStreamReader(input));
   }
 
   /**
-   * Resets the Loader object and sets the source of the data set to be 
-   * the supplied File object.
-   *
+   * Resets the Loader object and sets the source of the data set to be the
+   * supplied File object.
+   * 
    * @param file the source file.
    * @exception IOException if an error occurs
    */
@@ -500,9 +591,9 @@ public class CSVLoader
   }
 
   /**
-   * Determines and returns (if possible) the structure (internally the 
-   * header) of the data set as an empty set of instances.
-   *
+   * Determines and returns (if possible) the structure (internally the header)
+   * of the data set as an empty set of instances.
+   * 
    * @return the structure of the data set as an empty set of Instances
    * @exception IOException if an error occurs
    */
@@ -514,13 +605,13 @@ public class CSVLoader
 
     if (m_structure == null) {
       try {
-	m_st = new StreamTokenizer(m_sourceReader);
-	initTokenizer(m_st);
-	readStructure(m_st);
+        m_st = new StreamTokenizer(m_sourceReader);
+        initTokenizer(m_st);
+        readStructure(m_st);
       } catch (FileNotFoundException ex) {
       }
     }
-    
+
     return m_structure;
   }
 
@@ -535,10 +626,10 @@ public class CSVLoader
   }
 
   /**
-   * Return the full data set. If the structure hasn't yet been determined
-   * by a call to getStructure then method should do so before processing
-   * the rest of the data set.
-   *
+   * Return the full data set. If the structure hasn't yet been determined by a
+   * call to getStructure then method should do so before processing the rest of
+   * the data set.
+   * 
    * @return the structure of the data set as an empty set of Instances
    * @exception IOException if there is no source or parsing fails
    */
@@ -547,24 +638,24 @@ public class CSVLoader
     if ((m_sourceFile == null) && (m_sourceReader == null)) {
       throw new IOException("No source has been specified");
     }
-    
+
     if (m_structure == null) {
       getStructure();
     }
-    
+
     if (m_st == null) {
       m_st = new StreamTokenizer(m_sourceReader);
-      initTokenizer(m_st);      
+      initTokenizer(m_st);
     }
-        
+
     m_st.ordinaryChar(',');
     m_st.ordinaryChar('\t');
-    
+
     m_cumulativeStructure = new FastVector(m_structure.numAttributes());
     for (int i = 0; i < m_structure.numAttributes(); i++) {
       m_cumulativeStructure.addElement(new Hashtable());
     }
-    
+
     m_cumulativeInstances = new FastVector();
     FastVector current;
     while ((current = getInstance(m_st)) != null) {
@@ -574,7 +665,7 @@ public class CSVLoader
     FastVector atts = new FastVector(m_structure.numAttributes());
     for (int i = 0; i < m_structure.numAttributes(); i++) {
       String attname = m_structure.attribute(i).name();
-      Hashtable tempHash = ((Hashtable)m_cumulativeStructure.elementAt(i));
+      Hashtable tempHash = ((Hashtable) m_cumulativeStructure.elementAt(i));
       if (tempHash.size() == 0) {
         if (m_dateAttributes.isInRange(i)) {
           atts.addElement(new Attribute(attname, m_dateFormat));
@@ -582,93 +673,92 @@ public class CSVLoader
           atts.addElement(new Attribute(attname));
         }
       } else {
-	if (m_StringAttributes.isInRange(i)) {
-	  atts.addElement(new Attribute(attname, (FastVector) null));
-	}
-	else {
-	  FastVector values = new FastVector(tempHash.size());
-	  // add dummy objects in order to make the FastVector's size == capacity
-	  for (int z = 0; z < tempHash.size(); z++) {
-	    values.addElement("dummy");
-	  }
-	  Enumeration e = tempHash.keys();
-	  while (e.hasMoreElements()) {
-	    Object ob = e.nextElement();
-	    //	  if (ob instanceof Double) {
-	    int index = ((Integer)tempHash.get(ob)).intValue();
-	    String s = ob.toString();
-	    if (s.startsWith("'") || s.startsWith("\""))
-	      s = s.substring(1, s.length() - 1);
-	    values.setElementAt(new String(s), index);
-	    //	  }
-	  }
-	  atts.addElement(new Attribute(attname, values));
-	}
+        if (m_StringAttributes.isInRange(i)) {
+          atts.addElement(new Attribute(attname, (FastVector) null));
+        } else {
+          FastVector values = new FastVector(tempHash.size());
+          // add dummy objects in order to make the FastVector's size ==
+          // capacity
+          for (int z = 0; z < tempHash.size(); z++) {
+            values.addElement("dummy");
+          }
+          Enumeration e = tempHash.keys();
+          while (e.hasMoreElements()) {
+            Object ob = e.nextElement();
+            // if (ob instanceof Double) {
+            int index = ((Integer) tempHash.get(ob)).intValue();
+            String s = ob.toString();
+            if (s.startsWith("'") || s.startsWith("\""))
+              s = s.substring(1, s.length() - 1);
+            values.setElementAt(new String(s), index);
+            // }
+          }
+          atts.addElement(new Attribute(attname, values));
+        }
       }
     }
 
     // make the instances
     String relationName;
     if (m_sourceFile != null)
-      relationName = (m_sourceFile.getName()).replaceAll("\\.[cC][sS][vV]$","");
+      relationName = (m_sourceFile.getName())
+          .replaceAll("\\.[cC][sS][vV]$", "");
     else
       relationName = "stream";
-    Instances dataSet = new Instances(relationName, 
-				      atts, 
-				      m_cumulativeInstances.size());
+    Instances dataSet = new Instances(relationName, atts,
+        m_cumulativeInstances.size());
 
     for (int i = 0; i < m_cumulativeInstances.size(); i++) {
-      current = ((FastVector)m_cumulativeInstances.elementAt(i));
-      double [] vals = new double[dataSet.numAttributes()];
+      current = ((FastVector) m_cumulativeInstances.elementAt(i));
+      double[] vals = new double[dataSet.numAttributes()];
       for (int j = 0; j < current.size(); j++) {
-	Object cval = current.elementAt(j);
-	if (cval instanceof String) {
-	  if (((String)cval).compareTo(m_MissingValue) == 0) {
-	    vals[j] = Instance.missingValue();
-	  } else {
-	    if (dataSet.attribute(j).isString()) {
-	      vals[j] = dataSet.attribute(j).addStringValue((String) cval);
-	    }
-	    else if (dataSet.attribute(j).isNominal()) {
-	      // find correct index
-	      Hashtable lookup = (Hashtable)m_cumulativeStructure.elementAt(j);
-	      int index = ((Integer)lookup.get(cval)).intValue();
-	      vals[j] = index;
-	    }
-	    else {
-	      throw new IllegalStateException("Wrong attribute type at position " + (i+1) + "!!!");
-	    }
-	  }
-	} else if (dataSet.attribute(j).isNominal()) {
-	  // find correct index
-	  Hashtable lookup = (Hashtable)m_cumulativeStructure.elementAt(j);
-	  int index = ((Integer)lookup.get(cval)).intValue();
-	  vals[j] = index;
-	} else if (dataSet.attribute(j).isString()) {
-	  vals[j] = dataSet.attribute(j).addStringValue("" + cval);
-	} else {
-	  vals[j] = ((Double)cval).doubleValue();
-	}
+        Object cval = current.elementAt(j);
+        if (cval instanceof String) {
+          if (((String) cval).compareTo(m_MissingValue) == 0) {
+            vals[j] = Instance.missingValue();
+          } else {
+            if (dataSet.attribute(j).isString()) {
+              vals[j] = dataSet.attribute(j).addStringValue((String) cval);
+            } else if (dataSet.attribute(j).isNominal()) {
+              // find correct index
+              Hashtable lookup = (Hashtable) m_cumulativeStructure.elementAt(j);
+              int index = ((Integer) lookup.get(cval)).intValue();
+              vals[j] = index;
+            } else {
+              throw new IllegalStateException(
+                  "Wrong attribute type at position " + (i + 1) + "!!!");
+            }
+          }
+        } else if (dataSet.attribute(j).isNominal()) {
+          // find correct index
+          Hashtable lookup = (Hashtable) m_cumulativeStructure.elementAt(j);
+          int index = ((Integer) lookup.get(cval)).intValue();
+          vals[j] = index;
+        } else if (dataSet.attribute(j).isString()) {
+          vals[j] = dataSet.attribute(j).addStringValue("" + cval);
+        } else {
+          vals[j] = ((Double) cval).doubleValue();
+        }
       }
       dataSet.add(new Instance(1.0, vals));
     }
     m_structure = new Instances(dataSet, 0);
     setRetrieval(BATCH);
     m_cumulativeStructure = null; // conserve memory
-    
+
     // close the stream
     m_sourceReader.close();
-    
+
     return dataSet;
   }
 
   /**
    * CSVLoader is unable to process a data set incrementally.
-   *
+   * 
    * @param structure ignored
    * @return never returns without throwing an exception
-   * @exception IOException always. CSVLoader is unable to process a data
-   * set incrementally.
+   * @exception IOException always. CSVLoader is unable to process a data set
+   *              incrementally.
    */
   @Override
   public Instance getNextInstance(Instances structure) throws IOException {
@@ -677,13 +767,14 @@ public class CSVLoader
 
   /**
    * Attempts to parse a line of the data set.
-   *
+   * 
    * @param tokenizer the tokenizer
-   * @return a FastVector containg String and Double objects representing
-   * the values of the instance.
+   * @return a FastVector containg String and Double objects representing the
+   *         values of the instance.
    * @exception IOException if an error occurs
-   *
-   * <pre><jml>
+   * 
+   *              <pre>
+   * <jml>
    *    private_normal_behavior
    *      requires: tokenizer != null;
    *      ensures: \result  != null;
@@ -692,10 +783,10 @@ public class CSVLoader
    *      requires: tokenizer == null
    *                || (* unsucessful parse *);
    *      signals: (IOException);
-   * </jml></pre>
+   * </jml>
+   * </pre>
    */
-  private FastVector getInstance(StreamTokenizer tokenizer) 
-    throws IOException {
+  private FastVector getInstance(StreamTokenizer tokenizer) throws IOException {
 
     FastVector current = new FastVector();
 
@@ -707,46 +798,45 @@ public class CSVLoader
     boolean first = true;
     boolean wasSep;
 
-    while (tokenizer.ttype != StreamTokenizer.TT_EOL &&
-	   tokenizer.ttype != StreamTokenizer.TT_EOF) {
-      
+    while (tokenizer.ttype != StreamTokenizer.TT_EOL
+        && tokenizer.ttype != StreamTokenizer.TT_EOF) {
+
       // Get next token
       if (!first) {
-	ConverterUtils.getToken(tokenizer);
+        ConverterUtils.getToken(tokenizer);
       }
 
-      if (tokenizer.ttype == ',' || tokenizer.ttype == '\t' || 
-	  tokenizer.ttype == StreamTokenizer.TT_EOL) {
-	current.addElement(m_MissingValue);
-	wasSep = true;
+      if (tokenizer.ttype == ',' || tokenizer.ttype == '\t'
+          || tokenizer.ttype == StreamTokenizer.TT_EOL) {
+        current.addElement(m_MissingValue);
+        wasSep = true;
       } else {
-	wasSep = false;
-	if (tokenizer.sval.equals(m_MissingValue)) {
-	  current.addElement(new String(m_MissingValue));
-	}
-	else {
-	  // try to parse as a number
-	  try {
-	    double val = Double.valueOf(tokenizer.sval).doubleValue();
-	    current.addElement(new Double(val));
-	  } catch (NumberFormatException e) {
-	    // otherwise assume its an enumerated value
-	    current.addElement(new String(tokenizer.sval));
-	  }
-	}
+        wasSep = false;
+        if (tokenizer.sval.equals(m_MissingValue)) {
+          current.addElement(new String(m_MissingValue));
+        } else {
+          // try to parse as a number
+          try {
+            double val = Double.valueOf(tokenizer.sval).doubleValue();
+            current.addElement(new Double(val));
+          } catch (NumberFormatException e) {
+            // otherwise assume its an enumerated value
+            current.addElement(new String(tokenizer.sval));
+          }
+        }
       }
-      
+
       if (!wasSep) {
-	ConverterUtils.getToken(tokenizer);
+        ConverterUtils.getToken(tokenizer);
       }
       first = false;
     }
-    
+
     // check number of values read
     if (current.size() != m_structure.numAttributes()) {
-      ConverterUtils.errms(tokenizer, 
-			   "wrong number of values. Read "+current.size()
-			   +", expected "+m_structure.numAttributes());
+      ConverterUtils.errms(tokenizer,
+          "wrong number of values. Read " + current.size() + ", expected "
+              + m_structure.numAttributes());
     }
 
     // check for structure update
@@ -760,15 +850,16 @@ public class CSVLoader
   }
 
   /**
-   * Checks the current instance against what is known about the structure
-   * of the data set so far. If there is a nominal value for an attribute
-   * that was beleived to be numeric then all previously seen values for this
-   * attribute are stored in a Hashtable.
-   *
+   * Checks the current instance against what is known about the structure of
+   * the data set so far. If there is a nominal value for an attribute that was
+   * beleived to be numeric then all previously seen values for this attribute
+   * are stored in a Hashtable.
+   * 
    * @param current a <code>FastVector</code> value
    * @exception Exception if an error occurs
-   *
-   * <pre><jml>
+   * 
+   *              <pre>
+   * <jml>
    *    private_normal_behavior
    *      requires: current != null;
    *  also
@@ -776,7 +867,8 @@ public class CSVLoader
    *      requires: current == null
    *                || (* unrecognized object type in current *);
    *      signals: (Exception);
-   * </jml></pre>
+   * </jml>
+   * </pre>
    */
   private void checkStructure(FastVector current) throws Exception {
     if (current == null) {
@@ -790,81 +882,83 @@ public class CSVLoader
       m_dateAttributes.setUpper(current.size() - 1);
       m_FirstCheck = false;
     }
-    
+
     for (int i = 0; i < current.size(); i++) {
       Object ob = current.elementAt(i);
-      if ((ob instanceof String) || (m_NominalAttributes.isInRange(i)) || 
-          (m_StringAttributes.isInRange(i)) || m_dateAttributes.isInRange(i)) {
-	if (ob.toString().compareTo(m_MissingValue) == 0) {
-	  // do nothing
-	} else {
+      if ((ob instanceof String) || (m_NominalAttributes.isInRange(i))
+          || (m_StringAttributes.isInRange(i)) || m_dateAttributes.isInRange(i)) {
+        if (ob.toString().compareTo(m_MissingValue) == 0) {
+          // do nothing
+        } else {
 
-	  boolean notDate = true;
-	  if (m_dateAttributes.isInRange(i)) {
-	    // try to parse date string
-	    if (m_formatter == null) {
-	      m_formatter = new SimpleDateFormat(m_dateFormat);
-	    }
+          boolean notDate = true;
+          if (m_dateAttributes.isInRange(i)) {
+            // try to parse date string
+            if (m_formatter == null) {
+              m_formatter = new SimpleDateFormat(m_dateFormat);
+            }
 
-	    try {
-	      long time = m_formatter.parse(ob.toString()).getTime();
-	      Double timeL = new Double(time);
-	      current.setElementAt(timeL, i);
-	      notDate = false;
-	    } catch (ParseException e) {
-	      notDate = true;
-	    }       
-	  }
+            try {
+              long time = m_formatter.parse(ob.toString()).getTime();
+              Double timeL = new Double(time);
+              current.setElementAt(timeL, i);
+              notDate = false;
+            } catch (ParseException e) {
+              notDate = true;
+            }
+          }
 
-	  if (notDate) {
-	    Hashtable tempHash = (Hashtable)m_cumulativeStructure.elementAt(i);
-	    if (!tempHash.containsKey(ob)) {
-	      // may have found a nominal value in what was previously thought to
-	      // be a numeric variable.
-	      if (tempHash.size() == 0) {
-	        for (int j = 0; j < m_cumulativeInstances.size(); j++) {
-	          FastVector tempUpdate = 
-	            ((FastVector)m_cumulativeInstances.elementAt(j));
-	          Object tempO = tempUpdate.elementAt(i);
-	          if (tempO instanceof String) {
-	            // must have been a missing value
-	          } else {
-	            if (!tempHash.containsKey(tempO)) {
-	              tempHash.put(new Double(((Double)tempO).doubleValue()), 
-	                  new Integer(tempHash.size()));
-	            }
-	          }
-	        }
-	      }
-	      int newIndex = tempHash.size();
-	      tempHash.put(ob, new Integer(newIndex));
-	    }
-	  }
-	}
+          if (notDate) {
+            Hashtable tempHash = (Hashtable) m_cumulativeStructure.elementAt(i);
+            if (!tempHash.containsKey(ob)) {
+              // may have found a nominal value in what was previously thought
+              // to
+              // be a numeric variable.
+              if (tempHash.size() == 0) {
+                for (int j = 0; j < m_cumulativeInstances.size(); j++) {
+                  FastVector tempUpdate = ((FastVector) m_cumulativeInstances
+                      .elementAt(j));
+                  Object tempO = tempUpdate.elementAt(i);
+                  if (tempO instanceof String) {
+                    // must have been a missing value
+                  } else {
+                    if (!tempHash.containsKey(tempO)) {
+                      tempHash.put(new Double(((Double) tempO).doubleValue()),
+                          new Integer(tempHash.size()));
+                    }
+                  }
+                }
+              }
+              int newIndex = tempHash.size();
+              tempHash.put(ob, new Integer(newIndex));
+            }
+          }
+        }
       } else if (ob instanceof Double) {
-	Hashtable tempHash = (Hashtable)m_cumulativeStructure.elementAt(i);
-	if (tempHash.size() != 0) {
-	  if (!tempHash.containsKey(ob)) {
-	    int newIndex = tempHash.size();
-	    tempHash.put(new Double(((Double)ob).doubleValue()), 
-				    new Integer(newIndex));
-	  }
-	}
+        Hashtable tempHash = (Hashtable) m_cumulativeStructure.elementAt(i);
+        if (tempHash.size() != 0) {
+          if (!tempHash.containsKey(ob)) {
+            int newIndex = tempHash.size();
+            tempHash.put(new Double(((Double) ob).doubleValue()), new Integer(
+                newIndex));
+          }
+        }
       } else {
-	throw new Exception("Wrong object type in checkStructure!");
+        throw new Exception("Wrong object type in checkStructure!");
       }
     }
   }
 
   /**
-   * Assumes the first line of the file contains the attribute names.
-   * Assumes all attributes are String attributes (Reading the full data set with
+   * Assumes the first line of the file contains the attribute names. Assumes
+   * all attributes are String attributes (Reading the full data set with
    * getDataSet will establish the true structure).
-   *
+   * 
    * @param tokenizer a <code>StreamTokenizer</code> value
    * @exception IOException if an error occurs
-   *
-   * <pre><jml>
+   * 
+   *              <pre>
+   * <jml>
    *    private_normal_behavior
    *      requires: tokenizer != null;
    *      modifiable: m_structure;
@@ -874,24 +968,25 @@ public class CSVLoader
    *      requires: tokenizer == null
    *                || (* unsucessful parse *);
    *      signals: (IOException);
-   * </jml></pre>
+   * </jml>
+   * </pre>
    */
   private void readHeader(StreamTokenizer tokenizer) throws IOException {
-   
+
     FastVector attribNames = new FastVector();
     ConverterUtils.getFirstToken(tokenizer);
     if (tokenizer.ttype == StreamTokenizer.TT_EOF) {
-      ConverterUtils.errms(tokenizer,"premature end of file");
+      ConverterUtils.errms(tokenizer, "premature end of file");
     }
 
     while (tokenizer.ttype != StreamTokenizer.TT_EOL) {
-      attribNames.addElement(new Attribute(tokenizer.sval,
-          (FastVector)null));
+      attribNames.addElement(new Attribute(tokenizer.sval, (FastVector) null));
       ConverterUtils.getToken(tokenizer);
     }
     String relationName;
     if (m_sourceFile != null)
-      relationName = (m_sourceFile.getName()).replaceAll("\\.[cC][sS][vV]$","");
+      relationName = (m_sourceFile.getName())
+          .replaceAll("\\.[cC][sS][vV]$", "");
     else
       relationName = "stream";
     m_structure = new Instances(relationName, attribNames, 0);
@@ -899,24 +994,31 @@ public class CSVLoader
 
   /**
    * Initializes the stream tokenizer.
-   *
+   * 
    * @param tokenizer the tokenizer to initialize
    */
   private void initTokenizer(StreamTokenizer tokenizer) {
-    tokenizer.resetSyntax();         
-    tokenizer.whitespaceChars(0, (' '-1));    
-    tokenizer.wordChars(' ','\u00FF');
-    tokenizer.whitespaceChars(',',',');
-    tokenizer.whitespaceChars('\t','\t');
+    tokenizer.resetSyntax();
+    tokenizer.whitespaceChars(0, (' ' - 1));
+    tokenizer.wordChars(' ', '\u00FF');
+    tokenizer.whitespaceChars(',', ',');
+    tokenizer.whitespaceChars('\t', '\t');
     tokenizer.commentChar('%');
-    tokenizer.quoteChar('"');
-    tokenizer.quoteChar('\'');
+
+    String[] parts = m_Enclosures.split(",");
+    for (String e : parts) {
+      if (e.length() > 1 || e.length() == 0) {
+        throw new IllegalArgumentException(
+            "Enclosures can only be single characters");
+      }
+      tokenizer.quoteChar(e.charAt(0));
+    }
+
     tokenizer.eolIsSignificant(true);
   }
-  
+
   /**
-   * Resets the Loader ready to read a new data set or the
-   * same data set again.
+   * Resets the Loader ready to read a new data set or the same data set again.
    * 
    * @throws IOException if something goes wrong
    */
@@ -925,16 +1027,16 @@ public class CSVLoader
     m_structure = null;
     m_st = null;
     setRetrieval(NONE);
-    
+
     if (m_File != null) {
       setFile(new File(m_File));
     }
   }
-  
+
   /**
    * Returns the revision string.
    * 
-   * @return		the revision
+   * @return the revision
    */
   public String getRevision() {
     return RevisionUtils.extract("$Revision$");
@@ -942,11 +1044,10 @@ public class CSVLoader
 
   /**
    * Main method.
-   *
+   * 
    * @param args should contain the name of an input file.
    */
-  public static void main(String [] args) {
+  public static void main(String[] args) {
     runFileLoader(new CSVLoader(), args);
   }
 }
-
